--- a/index.css
+++ b/index.css
@@ -1,68 +1,184 @@
 :root {
-  --fontcolor-brown: #8c6800;
-  --color-green: #54a992;
-  --color-lightYellow: #ffe699;
-  --color-darkYellow: #ffd24d;
-  --color-lightOrange: #ffa64d;
-  --color-darkOrange: #d96d00;
-  --color-brown: #8c6900;
-  --color-pink: #ffb399;
-  --color-lightBlue: #2693ff;
-  --color-darkBlue: #006dd9;
-  --color-lightRed: #ff2626;
-  --color-darkRed: #b20000;
-  --color-lightPurpel: #ac91ff;
-  --color-darkPurpel: #7a4dff;
-  --color-lightGray: #dddddd;
-  --color-darkGray: #aaaaaa;
-  --color-lightGreen: #80ff00;
-  --color-darkGreen: #00b200;
-  --color-lightBrown: #661a00;
-  --color-darkBrown: #401000;
-  --color-CancelGrey: #535362;
-  --linearGradient-yellow: linear-gradient(to bottom, var(--color-lightYellow) 0%, var(--color-lightYellow) 50%, var(--color-darkYellow) 51%, var(--color-darkYellow) 100%);
-  --linearGradient-red: linear-gradient(to right, var(--color-lightRed) 0%, var(--color-lightRed) 50%, var(--color-darkRed) 51%, var(--color-darkRed) 100%);
-  --linearGradient-blue: linear-gradient(to right, var(--color-lightBlue) 0%, var(--color-lightBlue) 50%, var(--color-darkBlue) 51%, var(--color-darkBlue) 100%);
-  --linearGradient-green: linear-gradient(to right, var(--color-lightGreen) 0%, var(--color-lightGreen) 50%, var(--color-darkGreen) 51%, var(--color-darkGreen) 100%);
-  --linearGradient-orange: linear-gradient(to right, var(--color-lightOrange) 0%, var(--color-lightOrange) 50%, var(--color-darkOrange) 51%, var(--color-darkOrange) 100%);
-  --linearGradient-purple: linear-gradient(to right, var(--color-lightPurpel) 0%, var(--color-lightPurpel) 50%, var(--color-darkPurpel) 51%, var(--color-darkPurpel) 100%);
-  --linearGradient-gray: linear-gradient(to right, var(--color-lightGray) 0%, var(--color-lightGray) 50%, var(--color-darkGray) 51%, var(--color-darkGray) 100%);
-  --linearGradient-brown: linear-gradient(to right, var(--color-lightBrown) 0%, var(--color-lightBrown) 50%, var(--color-darkBrown) 51%, var(--color-darkBrown) 100%);
-}
+    --fontcolor-brown: #8c6800;
+    --color-green: #54a992;
+    --color-lightYellow: #ffe699;
+    --color-darkYellow: #ffd24d;
+    --color-lightOrange: #ffa64d;
+    --color-darkOrange: #d96d00;
+    --color-brown: #8c6900;
+    --color-pink: #ffb399;
+    --color-lightBlue: #2693ff;
+    --color-darkBlue: #006dd9;
+    --color-lightRed: #ff2626;
+    --color-darkRed: #b20000;
+    --color-lightPurpel: #ac91ff;
+    --color-darkPurpel: #7a4dff;
+    --color-lightGray: #dddddd;
+    --color-darkGray: #aaaaaa;
+    --color-lightGreen: #80ff00;
+    --color-darkGreen: #00b200;
+    --color-lightBrown: #661a00;
+    --color-darkBrown: #401000;
+    --color-CancelGrey: #535362;
+    --linearGradient-yellow: linear-gradient(to bottom, var(--color-lightYellow) 0%, var(--color-lightYellow) 50%, var(--color-darkYellow) 51%, var(--color-darkYellow) 100%);
+    --linearGradient-red: linear-gradient(to right, var(--color-lightRed) 0%, var(--color-lightRed) 50%, var(--color-darkRed) 51%, var(--color-darkRed) 100%);
+    --linearGradient-blue: linear-gradient(to right, var(--color-lightBlue) 0%, var(--color-lightBlue) 50%, var(--color-darkBlue) 51%, var(--color-darkBlue) 100%);
+    --linearGradient-green: linear-gradient(to right, var(--color-lightGreen) 0%, var(--color-lightGreen) 50%, var(--color-darkGreen) 51%, var(--color-darkGreen) 100%);
+    --linearGradient-orange: linear-gradient(to right, var(--color-lightOrange) 0%, var(--color-lightOrange) 50%, var(--color-darkOrange) 51%, var(--color-darkOrange) 100%);
+    --linearGradient-purple: linear-gradient(to right, var(--color-lightPurpel) 0%, var(--color-lightPurpel) 50%, var(--color-darkPurpel) 51%, var(--color-darkPurpel) 100%);
+    --linearGradient-gray: linear-gradient(to right, var(--color-lightGray) 0%, var(--color-lightGray) 50%, var(--color-darkGray) 51%, var(--color-darkGray) 100%);
+    --linearGradient-brown: linear-gradient(to right, var(--color-lightBrown) 0%, var(--color-lightBrown) 50%, var(--color-darkBrown) 51%, var(--color-darkBrown) 100%);
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    color: var(--fontcolor-brown);
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #344D67;
+  }
+  
+  
+  main {
+    /* display: none; */
+    width: 700px;
+    height: 700px;
+    background: url(./asset/background.jpg) no-repeat;
+    background-size: cover;
+    border: 10px solid #C0EEE4;
+    padding: 10px;
+    position: relative;
+  }
+  
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .time{
+    /* background-color: #ffffff */
+    background:var(--linearGradient-yellow);
+    border: 5px solid var(--color-brown);
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    line-height: 40px;
+  }
+  
+  .cash{
+    background:var(--linearGradient-yellow);
+    border: 5px solid var(--color-brown);
+    border-radius: 30px;
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    line-height: 40px;
+  }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-body {
-  color: var(--fontcolor-brown);
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  
+  /* 点餐部分 */
+ .menu{
+    width: 450px;
+    height: 550px;
+    background: #f1b80c;
+    position: relative;
+    display: none;
+  }
+  .menu-border{
+    width: 80%;
+    margin: auto;
+    border: #d96d00 solid 3px;
+    background: white;
+    
+  }
+  .orderCompleteBorder .inline-Box,.noeat .inline-Box{
+    background:var(--linearGradient-yellow);
+    border: 5px solid var(--color-brown);
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    line-height: 40px;
+  }
+  .orderDishes{
+    position: absolute;
+    top:30px;
+    left: 140px;;
+  }
+  .orderCompleteBorder .inline-Box{
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+  }
+  .noeat .inline-Box{
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+  }
+  .customerBox{
+    position: absolute;
+    top: -40px;
+    left: 40px;
+  }
+  .menu-border{
+    position: absolute;
+    top: 70px;
+    left: 50px;
+  }
+  .inline-border{
+    position: relative;
+  }
+.menu .menu-border .inline-border .allDishes {
+    margin-left:6%;
+    margin-top: 3%;
+}
+.menu .menu-border .inline-border .dishes {
+    margin:3% 0 0 15%;
+}
+/* 开始游戏启动部分 */
+.gameBegin{
+    background:  #f1b80c;
+    display: none;
+}
+.play .inline-Box{
+    background:var(--linearGradient-yellow);
+    border: 5px solid var(--color-brown);
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    line-height: 40px;
+}
+.gameBegin .inline-Box{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #344D67;
+  flex-direction: column;
 }
+/* 招聘厨师部分*/
+.buyChef{
+  background:  #f1b80c;
+  display: none;
 
-
-main {
-  width: 700px;
-  height: 700px;
-  background: var(--color-green);
-  border: 10px solid #C0EEE4;
-  padding: 10px;
 }
-
-header{
+.buyChef .inline-Box{
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
-.time{
-  /* background-color: #ffffff */
+.confirmRecruitment .inline-Box,.noRecruitment .inline-Box{
   background:var(--linearGradient-yellow);
   border: 5px solid var(--color-brown);
   border-radius: 20px;
@@ -71,22 +187,94 @@ header{
   text-align: center;
   line-height: 40px;
 }
-
-.cash{
+/* 解雇厨师 */
+.fryChef{
+  background:  #f1b80c;
+  display: none;
+}
+.fryChef .inline-Box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.confirmFry .inline-Box,.noFry .inline-Box{
   background:var(--linearGradient-yellow);
   border: 5px solid var(--color-brown);
-  border-radius: 30px;
-  width: 300px;
+  border-radius: 20px;
+  width: 200px;
   height: 50px;
   text-align: center;
   line-height: 40px;
 }
-
-
-
-.consumer{
-  background: var(--color-darkOrange);
+.moneyAlert{
+  display: none;
+}
+/* 厨师部分 */
+.chefPlace{
+  background: yellow;
+  width: 100%;
   height: 40%;
+  border: 3px solid white;
+  border-radius: 5px;
+}
+.small-inline-Box{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.chefBox {
+  margin: 10px auto auto;
+  position: relative;
+}
+.cookingBar{
+  position: absolute;
+  border: solid 4px white;
+  width: 100px;
+  background: bisque;
+  text-align: center;
+  bottom: -5px;
+}
+.addCookerImg{
+  width: 100px;
+  border: 5px solid white;
+  border-radius: 50%;
+  background:  var(--linearGradient-gray);
+}
+.plateImg{
+  /* display: none; */
+  width: 70px;
+  position: absolute;
+  bottom: -4px;
+  left: -8px;
+}
+.del-chef{
+  position: absolute;
+  font-size: 48px;
+  color: #006dd9;
+  right: -10px;
+  top: -20px;
+}
+.save-chef{
+  position: absolute;
+  font-size: 56px;
+  color: #006dd9;
+  left: 23px;
+  top: 15px;
+}
+
+
+
+/* 顾客部分 */
+  
+.consumerPlace{
+  background: var(--color-darkOrange);
+  height: 35%;
+  width: 97%;
+  border:5px solid white;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 100px;
+  left: 10px;
 }
 
 section{
@@ -94,5 +282,78 @@ section{
   border-radius: 10px;
 }
 
-.chefPlace{
+.grid-container {
+  background: var(--color-darkOrange);
+  display: grid;
+  grid-template-columns: auto auto;
+  width: 100%;
+  height: 100%;
+}
+.grid-item {
+  margin: auto 50px;
+  position: relative;
+}
+.seat{
+  width: 100px;
+  height: 100px;
+  border: 5px solid white;
+  border-radius: 50%;
+  background:  var(--linearGradient-gray);
+}
+.orderdishes{
+  position: absolute;
+  top: 10px;
+  left: 100px;
+}
+.orderdishes .orderdish{
+  border: solid 3px white;
+  width: 100px;
+  background: bisque;
+  text-align: center;
+}
+/* 排队顾客 */
+.waitingPlace{
+  display: flex;
+  position: absolute;
+  height: 15%;
+  width: 97%;
+  bottom: 0px;
+  left: 10px;
+}
+.customerImg{
+  width: 80px;
+  border: 5px solid white;
+  border-radius: 50%;
+  background:  var(--linearGradient-gray);
+}
+/* 警告部分 */
+.needAlert{
+  display: none;
+  background:wheat;
+  color: #0dbcc2;
+  position: absolute;
+  top: 340px;
+  left: 550px;
+  border: 5px white solid;
+  font-size: large
+}
+.finishAlert{
+  display: none;
+  background:wheat;
+  color: #0dbcc2;
+  position: absolute;
+  top: 340px;
+  left: 600px;
+  border: 5px white solid;
+  font-size: large
+}
+.chefAlert{
+  display: none;
+  background:wheat;
+  color: #0dbcc2;
+  position: absolute;
+  top: 340px;
+  left: 600px;
+  border: 5px white solid;
+  font-size: large
 }
