--- a/index.css
+++ b/index.css
@@ -29,13 +29,13 @@
     --linearGradient-gray: linear-gradient(to right, var(--color-lightGray) 0%, var(--color-lightGray) 50%, var(--color-darkGray) 51%, var(--color-darkGray) 100%);
     --linearGradient-brown: linear-gradient(to right, var(--color-lightBrown) 0%, var(--color-lightBrown) 50%, var(--color-darkBrown) 51%, var(--color-darkBrown) 100%);
   }
-  
+
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  
+
   body {
     color: var(--fontcolor-brown);
     width: 100vw;
@@ -46,8 +46,8 @@
     justify-content: center;
     background: #344D67;
   }
-  
-  
+
+
   main {
     /* display: none; */
     width: 700px;
@@ -58,12 +58,12 @@
     padding: 10px;
     position: relative;
   }
-  
+
   header{
     display: flex;
     justify-content: space-between;
   }
-  
+
   .time{
     /* background-color: #ffffff */
     background:var(--linearGradient-yellow);
@@ -74,7 +74,7 @@
     text-align: center;
     line-height: 40px;
   }
-  
+
   .cash{
     background:var(--linearGradient-yellow);
     border: 5px solid var(--color-brown);
@@ -86,7 +86,7 @@
   }
 
 
-  
+
   /* 点餐部分 */
  .menu{
     width: 450px;
@@ -100,7 +100,7 @@
     margin: auto;
     border: #d96d00 solid 3px;
     background: white;
-    
+
   }
   .orderCompleteBorder .inline-Box,.noeat .inline-Box{
     background:var(--linearGradient-yellow);
@@ -214,13 +214,13 @@
 .chefPlace{
   background: yellow;
   width: 100%;
-  height: 40%;
+  height: 20%;
   border: 3px solid white;
   border-radius: 5px;
 }
 .small-inline-Box{
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 33% 33% 33%;
 }
 .chefBox {
   margin: 10px auto auto;
@@ -241,7 +241,6 @@
   background:  var(--linearGradient-gray);
 }
 .plateImg{
-  /* display: none; */
   width: 70px;
   position: absolute;
   bottom: -4px;
@@ -253,6 +252,7 @@
   color: #006dd9;
   right: -10px;
   top: -20px;
+  cursor: pointer;
 }
 .save-chef{
   position: absolute;
@@ -260,12 +260,13 @@
   color: #006dd9;
   left: 23px;
   top: 15px;
+  cursor: pointer;
 }
 
 
 
 /* 顾客部分 */
-  
+
 .consumerPlace{
   background: var(--color-darkOrange);
   height: 35%;
