--- a/index.css
+++ b/index.css
@@ -1,185 +1,204 @@
 :root {
-    --fontcolor-brown: #8c6800;
-    --color-green: #54a992;
-    --color-lightYellow: #ffe699;
-    --color-darkYellow: #ffd24d;
-    --color-lightOrange: #ffa64d;
-    --color-darkOrange: #d96d00;
-    --color-brown: #8c6900;
-    --color-pink: #ffb399;
-    --color-lightBlue: #2693ff;
-    --color-darkBlue: #006dd9;
-    --color-lightRed: #ff2626;
-    --color-darkRed: #b20000;
-    --color-lightPurpel: #ac91ff;
-    --color-darkPurpel: #7a4dff;
-    --color-lightGray: #dddddd;
-    --color-darkGray: #aaaaaa;
-    --color-lightGreen: #80ff00;
-    --color-darkGreen: #00b200;
-    --color-lightBrown: #661a00;
-    --color-darkBrown: #401000;
-    --color-CancelGrey: #535362;
-    --linearGradient-yellow: linear-gradient(to bottom, var(--color-lightYellow) 0%, var(--color-lightYellow) 50%, var(--color-darkYellow) 51%, var(--color-darkYellow) 100%);
-    --linearGradient-red: linear-gradient(to right, var(--color-lightRed) 0%, var(--color-lightRed) 50%, var(--color-darkRed) 51%, var(--color-darkRed) 100%);
-    --linearGradient-blue: linear-gradient(to right, var(--color-lightBlue) 0%, var(--color-lightBlue) 50%, var(--color-darkBlue) 51%, var(--color-darkBlue) 100%);
-    --linearGradient-green: linear-gradient(to right, var(--color-lightGreen) 0%, var(--color-lightGreen) 50%, var(--color-darkGreen) 51%, var(--color-darkGreen) 100%);
-    --linearGradient-orange: linear-gradient(to right, var(--color-lightOrange) 0%, var(--color-lightOrange) 50%, var(--color-darkOrange) 51%, var(--color-darkOrange) 100%);
-    --linearGradient-purple: linear-gradient(to right, var(--color-lightPurpel) 0%, var(--color-lightPurpel) 50%, var(--color-darkPurpel) 51%, var(--color-darkPurpel) 100%);
-    --linearGradient-gray: linear-gradient(to right, var(--color-lightGray) 0%, var(--color-lightGray) 50%, var(--color-darkGray) 51%, var(--color-darkGray) 100%);
-    --linearGradient-brown: linear-gradient(to right, var(--color-lightBrown) 0%, var(--color-lightBrown) 50%, var(--color-darkBrown) 51%, var(--color-darkBrown) 100%);
-  }
+  --fontcolor-brown: #8c6800;
+  --color-green: #54a992;
+  --color-lightYellow: #ffe699;
+  --color-darkYellow: #ffd24d;
+  --color-lightOrange: #ffa64d;
+  --color-darkOrange: #d96d00;
+  --color-brown: #8c6900;
+  --color-pink: #ffb399;
+  --color-lightBlue: #2693ff;
+  --color-darkBlue: #006dd9;
+  --color-lightRed: #ff2626;
+  --color-darkRed: #b20000;
+  --color-lightPurpel: #ac91ff;
+  --color-darkPurpel: #7a4dff;
+  --color-lightGray: #dddddd;
+  --color-darkGray: #aaaaaa;
+  --color-lightGreen: #80ff00;
+  --color-darkGreen: #00b200;
+  --color-lightBrown: #661a00;
+  --color-darkBrown: #401000;
+  --color-CancelGrey: #535362;
+  --linearGradient-yellow: linear-gradient(to bottom, var(--color-lightYellow) 0%, var(--color-lightYellow) 50%, var(--color-darkYellow) 51%, var(--color-darkYellow) 100%);
+  --linearGradient-red: linear-gradient(to right, var(--color-lightRed) 0%, var(--color-lightRed) 50%, var(--color-darkRed) 51%, var(--color-darkRed) 100%);
+  --linearGradient-blue: linear-gradient(to right, var(--color-lightBlue) 0%, var(--color-lightBlue) 50%, var(--color-darkBlue) 51%, var(--color-darkBlue) 100%);
+  --linearGradient-green: linear-gradient(to right, var(--color-lightGreen) 0%, var(--color-lightGreen) 50%, var(--color-darkGreen) 51%, var(--color-darkGreen) 100%);
+  --linearGradient-orange: linear-gradient(to right, var(--color-lightOrange) 0%, var(--color-lightOrange) 50%, var(--color-darkOrange) 51%, var(--color-darkOrange) 100%);
+  --linearGradient-purple: linear-gradient(to right, var(--color-lightPurpel) 0%, var(--color-lightPurpel) 50%, var(--color-darkPurpel) 51%, var(--color-darkPurpel) 100%);
+  --linearGradient-gray: linear-gradient(to right, var(--color-lightGray) 0%, var(--color-lightGray) 50%, var(--color-darkGray) 51%, var(--color-darkGray) 100%);
+  --linearGradient-brown: linear-gradient(to right, var(--color-lightBrown) 0%, var(--color-lightBrown) 50%, var(--color-darkBrown) 51%, var(--color-darkBrown) 100%);
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  body {
-    color: var(--fontcolor-brown);
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #344D67;
-  }
-
-
-  main {
-    /* display: none; */
-    width: 700px;
-    height: 700px;
-    background: url(./asset/background.jpg) no-repeat;
-    background-size: cover;
-    border: 10px solid #C0EEE4;
-    padding: 10px;
-    position: relative;
-  }
-
-  header{
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .time{
-    /* background-color: #ffffff */
-    background:var(--linearGradient-yellow);
-    border: 5px solid var(--color-brown);
-    border-radius: 20px;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    line-height: 40px;
-  }
-
-  .cash{
-    background:var(--linearGradient-yellow);
-    border: 5px solid var(--color-brown);
-    border-radius: 30px;
-    width: 300px;
-    height: 50px;
-    text-align: center;
-    line-height: 40px;
-  }
+body {
+  color: var(--fontcolor-brown);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #344D67;
+}
 
 
+main {
+  /* display: none; */
+  width: 700px;
+  height: 700px;
+  background: url(./asset/background.jpg) no-repeat;
+  background-size: cover;
+  border: 10px solid #C0EEE4;
+  padding: 10px;
+  position: relative;
+}
 
-  /* 点餐部分 */
- .menu{
-    width: 450px;
-    height: 550px;
-    background: #f1b80c;
-    position: relative;
-    display: none;
-  }
-  .menu-border{
-    width: 80%;
-    margin: auto;
-    border: #d96d00 solid 3px;
-    background: white;
+header {
+  display: flex;
+  justify-content: space-between;
+}
 
-  }
-  .orderCompleteBorder .inline-Box,.noeat .inline-Box{
-    background:var(--linearGradient-yellow);
-    border: 5px solid var(--color-brown);
-    border-radius: 20px;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    line-height: 40px;
-  }
-  .orderDishes{
-    position: absolute;
-    top:30px;
-    left: 140px;;
-  }
-  .orderCompleteBorder .inline-Box{
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-  }
-  .noeat .inline-Box{
-    position: absolute;
-    bottom: 20px;
-    right: 0;
-  }
-  .customerBox{
-    position: absolute;
-    top: -40px;
-    left: 40px;
-  }
-  .menu-border{
-    position: absolute;
-    top: 70px;
-    left: 50px;
-  }
-  .inline-border{
-    position: relative;
-  }
+.time {
+  /* background-color: #ffffff */
+  background: var(--linearGradient-yellow);
+  border: 5px solid var(--color-brown);
+  border-radius: 20px;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.cash {
+  background: var(--linearGradient-yellow);
+  border: 5px solid var(--color-brown);
+  border-radius: 30px;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  line-height: 40px;
+}
+
+
+
+/* 点餐部分 */
+.menu {
+  width: 450px;
+  height: 550px;
+  background: #f1b80c;
+  position: relative;
+  display: none;
+}
+
+.menu-border {
+  width: 80%;
+  margin: auto;
+  border: #d96d00 solid 3px;
+  background: white;
+
+}
+
+.orderCompleteBorder .inline-Box,
+.noeat .inline-Box {
+  background: var(--linearGradient-yellow);
+  border: 5px solid var(--color-brown);
+  border-radius: 20px;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.orderDishes {
+  position: absolute;
+  top: 30px;
+  left: 140px;
+  ;
+}
+
+.orderCompleteBorder .inline-Box {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+}
+
+.noeat .inline-Box {
+  position: absolute;
+  bottom: 20px;
+  right: 0;
+}
+
+.customerBox {
+  position: absolute;
+  top: -40px;
+  left: 40px;
+}
+
+.menu-border {
+  position: absolute;
+  top: 70px;
+  left: 50px;
+}
+
+.inline-border {
+  position: relative;
+}
+
 .menu .menu-border .inline-border .allDishes {
-    margin-left:6%;
-    margin-top: 3%;
+  margin-left: 6%;
+  margin-top: 3%;
 }
+
 .menu .menu-border .inline-border .dishes {
-    margin:3% 0 0 15%;
+  margin: 3% 0 0 15%;
 }
+
 /* 开始游戏启动部分 */
-.gameBegin{
-    background:  #f1b80c;
-    display: none;
+.gameBegin {
+  background: #f1b80c;
+  display: none;
 }
-.play .inline-Box{
-    background:var(--linearGradient-yellow);
-    border: 5px solid var(--color-brown);
-    border-radius: 20px;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    line-height: 40px;
+
+.play .inline-Box {
+  background: var(--linearGradient-yellow);
+  border: 5px solid var(--color-brown);
+  border-radius: 20px;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 40px;
 }
-.gameBegin .inline-Box{
+
+.gameBegin .inline-Box {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 /* 招聘厨师部分*/
-.buyChef{
-  background:  #f1b80c;
+.buyChef {
+  background: #f1b80c;
   display: none;
 
 }
-.buyChef .inline-Box{
+
+.buyChef .inline-Box {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.confirmRecruitment .inline-Box,.noRecruitment .inline-Box{
-  background:var(--linearGradient-yellow);
+
+.confirmRecruitment .inline-Box,
+.noRecruitment .inline-Box {
+  background: var(--linearGradient-yellow);
   border: 5px solid var(--color-brown);
   border-radius: 20px;
   width: 200px;
@@ -187,19 +206,23 @@
   text-align: center;
   line-height: 40px;
 }
+
 /* 解雇厨师 */
-.fryChef{
-  background:  #f1b80c;
+.fryChef {
+  background: #f1b80c;
   display: none;
 }
-.fryChef .inline-Box{
+
+.fryChef .inline-Box {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.confirmFry .inline-Box,.noFry .inline-Box{
-  background:var(--linearGradient-yellow);
+
+.confirmFry .inline-Box,
+.noFry .inline-Box {
+  background: var(--linearGradient-yellow);
   border: 5px solid var(--color-brown);
   border-radius: 20px;
   width: 200px;
@@ -207,35 +230,41 @@
   text-align: center;
   line-height: 40px;
 }
-.moneyAlert{
+
+.moneyAlert {
   display: none;
 }
+
 /* 厨师部分 */
-.chefPlace{
+.chefPlace {
   background: yellow;
   width: 100%;
   height: 20%;
   border: 3px solid white;
   border-radius: 5px;
 }
-.small-inline-Box{
+
+.small-inline-Box {
   display: grid;
   grid-template-columns: 33% 33% 33%;
 }
+
 .chefBox {
   margin: 10px auto auto;
   position: relative;
 }
-.shade{
+
+.shade {
   height: 20px;
   z-index: 0;
 }
-.dish{
+
+.dish {
   position: absolute;
   width: 100px;
 }
 
-.cookingBar{
+.cookingBar {
   position: absolute;
   border: solid 4px white;
   width: 100px;
@@ -243,19 +272,22 @@
   text-align: center;
   bottom: -5px;
 }
-.addCookerImg{
+
+.addCookerImg {
   width: 100px;
   border: 5px solid white;
   border-radius: 50%;
-  background:  var(--linearGradient-gray);
+  background: var(--linearGradient-gray);
 }
-.plateImg{
+
+.plateImg {
   width: 70px;
   position: absolute;
   bottom: -4px;
   left: -8px;
 }
-.del-chef{
+
+.del-chef {
   position: absolute;
   font-size: 48px;
   color: #006dd9;
@@ -263,7 +295,8 @@
   top: -20px;
   cursor: pointer;
 }
-.save-chef{
+
+.save-chef {
   position: absolute;
   font-size: 56px;
   color: #006dd9;
@@ -276,19 +309,19 @@
 
 /* 顾客部分 */
 
-.consumerPlace{
+.consumerPlace {
   background: var(--color-darkOrange);
   height: 35%;
   width: 97%;
-  border:5px solid white;
+  border: 5px solid white;
   border-radius: 10px;
   position: absolute;
   bottom: 100px;
   left: 10px;
 }
 
-section{
-  border:5px solid white;
+section {
+  border: 5px solid white;
   border-radius: 10px;
 }
 
@@ -299,30 +332,35 @@ section{
   width: 100%;
   height: 100%;
 }
+
 .grid-item {
   margin: auto 50px;
   position: relative;
 }
-.seat{
+
+.seat {
   width: 100px;
   height: 100px;
   border: 5px solid white;
   border-radius: 50%;
-  background:  var(--linearGradient-gray);
+  background: var(--linearGradient-gray);
 }
-.orderdishes{
+
+.orderdishes {
   position: absolute;
   top: 10px;
   left: 100px;
 }
-.orderdishes .orderdish{
+
+.orderdishes .orderdish {
   border: solid 3px white;
   width: 100px;
   background: bisque;
   text-align: center;
 }
+
 /* 排队顾客 */
-.waitingPlace{
+.waitingPlace {
   display: flex;
   position: absolute;
   height: 15%;
@@ -330,16 +368,18 @@ section{
   bottom: 0px;
   left: 10px;
 }
-.customerImg{
+
+.customerImg {
   width: 80px;
   border: 5px solid white;
   border-radius: 50%;
-  background:  var(--linearGradient-gray);
+  background: var(--linearGradient-gray);
 }
+
 /* 警告部分 */
-.needAlert{
+.needAlert {
   display: none;
-  background:wheat;
+  background: wheat;
   color: #0dbcc2;
   position: absolute;
   top: 340px;
@@ -347,9 +387,10 @@ section{
   border: 5px white solid;
   font-size: large
 }
-.finishAlert{
+
+.finishAlert {
   display: none;
-  background:wheat;
+  background: wheat;
   color: #0dbcc2;
   position: absolute;
   top: 340px;
@@ -357,9 +398,10 @@ section{
   border: 5px white solid;
   font-size: large
 }
-.chefAlert{
+
+.chefAlert {
   display: none;
-  background:wheat;
+  background: wheat;
   color: #0dbcc2;
   position: absolute;
   top: 340px;
