--- a/index.css
+++ b/index.css
@@ -150,6 +150,7 @@
 .gameBegin{
     background:  #f1b80c;
     display: none;
+    z-index: 2;
 }
 .play .inline-Box{
     background:var(--linearGradient-yellow);
@@ -170,6 +171,10 @@
 .buyChef{
   background:  #f1b80c;
   display: none;
+  position: fixed;
+  top:40%;
+  left: 38%;
+  z-index: 2;
 
 }
 .buyChef .inline-Box{
@@ -191,6 +196,10 @@
 .fryChef{
   background:  #f1b80c;
   display: none;
+  position: fixed;
+  top:40%;
+  left: 38%;
+  z-index: 2;
 }
 .fryChef .inline-Box{
   display: flex;
@@ -366,4 +375,14 @@ section{
   left: 600px;
   border: 5px white solid;
   font-size: large
+}
+/* 阴影效果 */
+.blackShadow {
+  display: none;
+  position:fixed;
+  left: 27%;
+  width:46%;
+  height:100%;
+  background-color: rgba(88, 88, 88, 0.568);
+  z-index: 1;
 }
