--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ header {
   line-height: 40px;
 }
 
-.seatImg{
+.seatImg {
   width: 100%
 }
 
@@ -97,8 +97,9 @@ header {
   width: 450px;
   height: 550px;
   background: #f1b80c;
-  position: relative;
+  position: absolute;
   display: none;
+  z-index: 2;
 }
 
 .menu-border {
@@ -165,10 +166,10 @@ header {
 }
 
 /* 开始游戏启动部分 */
-.gameBegin{
-    background:  #f1b80c;
-    display: none;
-    z-index: 2;
+.gameBegin {
+  background: #f1b80c;
+  display: none;
+  z-index: 2;
 }
 
 .play .inline-Box {
@@ -193,7 +194,7 @@ header {
   background: #f1b80c;
   display: none;
   position: fixed;
-  top:40%;
+  top: 40%;
   left: 38%;
   z-index: 2;
 
@@ -222,7 +223,7 @@ header {
   background: #f1b80c;
   display: none;
   position: fixed;
-  top:40%;
+  top: 40%;
   left: 38%;
   z-index: 2;
 }
@@ -271,7 +272,7 @@ header {
 .shade {
   height: 20px;
   z-index: 0;
-  width: 10%;
+  width: 1%;
   background: red;
 }
 
@@ -281,7 +282,6 @@ header {
 }
 
 .dish {
-  position: absolute;
   width: 95px;
 }
 
@@ -289,9 +289,21 @@ header {
   position: absolute;
   border: solid 4px white;
   width: 95px;
-  background: bisque;
   text-align: center;
   bottom: -5px;
+  background: bisque;
+}
+
+.Bar {
+  margin-top: -4px;
+  border: solid 4px white;
+  background: bisque;
+  width: 100px;
+  height: 28px;
+  text-align: center;
+  bottom: -5px;
+  top: 60px;
+  display: none;
 }
 
 .addCookerImg {
@@ -430,13 +442,13 @@ section {
   border: 5px white solid;
   font-size: large
 }
+
 /* 阴影效果 */
 .blackShadow {
   display: none;
-  position:fixed;
-  left: 27%;
-  width:46%;
-  height:100%;
+  position: absolute;
+  width: 97%;
+  height: 100%;
   background-color: rgba(88, 88, 88, 0.568);
   z-index: 1;
 }
