--- a/index.css
+++ b/index.css
@@ -167,8 +167,8 @@ header {
 /* 开始游戏启动部分 */
 .gameBegin {
   background: #f1b80c;
-  display: none;
   z-index: 2;
+  position: absolute
 }
 
 .play .inline-Box {
@@ -391,25 +391,29 @@ section {
   background: bisque;
   text-align: center;
 }
-.orderdishes .Bar{
+
+.orderdishes .Bar {
   position: relative;
 }
-.orderdishes .Bar .dishOk{
-  width:43px;
-  height:43px;
-  /* position:absolute; */
-  left:100px;
-  top:-5px;
-  display: none;
+
+.dishOk {
+  width: 43px;
+  height: 43px;
+  position: absolute;
+  left: 100px;
+  top: -5px;
+  /* display: none; */
 }
-.checkout{
+
+.checkout {
   width: 60px;
   height: 60px;
   position: absolute;
   top: 55px;
   left: -25px;
 }
-.placate{
+
+.placate {
   width: 60px;
   height: 60px;
   position: absolute;
@@ -435,7 +439,7 @@ section {
 }
 
 /* 警告部分 */
-.needAlert {
+.moneyAlert {
   display: none;
   background: wheat;
   color: #0dbcc2;
@@ -446,15 +450,19 @@ section {
   font-size: large
 }
 
-.finishAlert {
+.finish {
   display: none;
   background: wheat;
   color: #0dbcc2;
   position: absolute;
-  top: 340px;
-  left: 600px;
+  top: 40%;
+  left: 37%;
+  text-align: center;
+  line-height: 90px;
+  height: 100px;
+  width: 200px;
   border: 5px white solid;
-  font-size: large
+  font-size: 35px
 }
 
 .chefAlert {
@@ -470,7 +478,7 @@ section {
 
 /* 阴影效果 */
 .blackShadow {
-  display: none;
+  display: block;
   position: absolute;
   width: 97%;
   height: 100%;
